<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.principals.Professional" >

    <TextView
        android:id="@+id/textView26"
        style="@style/TitolFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profecional" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                style="@style/logo"
                android:src="@drawable/logog" />

            <Button
                android:id="@+id/botogoro"
                style="@style/botonEmpresa"
                android:text="@string/goro" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                style="@style/logo"
                android:layout_width="123dp"
                android:alpha="0"
                android:src="@drawable/logofals" />

            <Button
                android:id="@+id/botoaltres"
                style="@style/botonEmpresa"
                android:text="@string/norelacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/logo"
                android:src="@drawable/logoc" />

            <Button
                android:id="@+id/botocanela"
                style="@style/botonEmpresa"
                android:text="@string/canela" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                style="@style/logo"
                android:src="@drawable/logomu" />

            <Button
                android:id="@+id/botomultivac"
                style="@style/botonEmpresa"
                android:text="@string/multivac" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView5"
                style="@style/logo"
                android:src="@drawable/logop" />

            <Button
                android:id="@+id/botoproto"
                style="@style/botonEmpresa"
                android:text="@string/proto" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView6"
                style="@style/logo"
                android:src="@drawable/logomo" />

            <Button
                android:id="@+id/botomolmat"
                style="@style/botonEmpresa"
                android:text="@string/molmat" />

        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/explicacio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/marco_aviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="#000000">

            <TextView
                android:id="@+id/texto_aviso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/explic"
                android:textSize="25sp" />
        </FrameLayout>

    </FrameLayout>

</LinearLayout>