<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="MainActivity">

    <item
        android:id="@+id/llamar"
        android:icon="@android:drawable/sym_action_call"
        android:orderInCategory="1"
        android:title="@string/trucar"
        app:showAsAction="always">

    </item>
    <!--
    <item
        android:id="@+id/imprimir"
        android:icon="@drawable/print"
        android:orderInCategory="2"
        android:title="@string/imprimir"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/configurar"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="3"
        android:title="@string/configurar"
        app:showAsAction="never">

    </item>
    -->
    <item
        android:id="@+id/sobre"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="4"
        android:title="@string/about"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/salir"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="5"
        android:title="@string/sortir"
        app:showAsAction="never">

    </item>


</menu>